--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
   </head>
   <body>
     <ul id="messages"></ul>
+
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+
+    <script src="/socket.io/socket.io.js"></script>
+
+    <script>
+      var socket = io();
+    </script>
+
   </body>
 </html>
